k8s/service-api-reports.yaml
apiVersion: v1
kind: Service
metadata:
  name: playwright-reports-service
spec:
  selector:
    app: playwright-api-tests
  ports:
    - port: 9323
      targetPort: 9323
      name: reports
  type: ClusterIP
